<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Secole" >

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundGravity="center_horizontal"
        app:srcCompat="@drawable/foreground" />

    <HorizontalScrollView
        android:layout_width="1200dp"
        android:layout_height="800dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="50dp"
        android:scrollbarSize="10dp"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button1"
                android:layout_width="576dp"
                android:layout_height="752dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="-24dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="48dp"
                android:layout_weight="1"
                android:background="@drawable/ripple_effect"
                android:shadowColor="#09487A"
                android:text="@string/dec1"
                android:textColor="#FFFFFF"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="576dp"
                android:layout_height="752dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="-24dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="48dp"
                android:layout_weight="1"
                android:background="@drawable/ripple_effect"
                android:text="@string/dec2"
                android:textColor="#FFFFFF"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="576dp"
                android:layout_height="752dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="-24dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="48dp"
                android:layout_weight="1"
                android:background="@drawable/ripple_effect"
                android:text="@string/dec3"
                android:textColor="#FFFFFF"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button4"
                android:layout_width="576dp"
                android:layout_height="752dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="-24dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="48dp"
                android:layout_weight="1"
                android:background="@drawable/ripple_effect"
                android:text="@string/dec4"
                android:textColor="#FFFFFF"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button5"
                android:layout_width="576dp"
                android:layout_height="752dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="-24dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="48dp"
                android:layout_weight="1"
                android:background="@drawable/ripple_effect"
                android:text="@string/dec5"
                android:textColor="#FFFFFF"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="576dp"
                android:layout_height="752dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="-24dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="48dp"
                android:layout_weight="1"
                android:background="@drawable/ripple_effect"
                android:text="@string/dec6"
                android:textColor="#FFFFFF"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button7"
                android:layout_width="576dp"
                android:layout_height="752dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="-24dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="48dp"
                android:layout_weight="1"
                android:background="@drawable/ripple_effect"
                android:text="@string/dec7"
                android:textColor="#FFFFFF"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button8"
                android:layout_width="576dp"
                android:layout_height="752dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="-24dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="48dp"
                android:layout_weight="1"
                android:background="@drawable/ripple_effect"
                android:text="@string/dec8"
                android:textColor="#FFFFFF"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button9"
                android:layout_width="576dp"
                android:layout_height="752dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="-24dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="48dp"
                android:layout_weight="1"
                android:background="@drawable/ripple_effect"
                android:text="@string/dec9"
                android:textColor="#FFFFFF"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button10"
                android:layout_width="576dp"
                android:layout_height="752dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="-24dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="48dp"
                android:layout_weight="1"
                android:background="@drawable/ripple_effect"
                android:text="@string/dec10"
                android:textColor="#FFFFFF"
                android:textSize="50sp" />

        </LinearLayout>
    </HorizontalScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/afis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_gravity="center"
            android:scaleType="fitStart"
            android:text="TextView"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>